instruction for the release build, which I have not released