@@ -17,6 +17,7 @@ It didn't compile, and had commented bytecode sections. This is me getting it to
 ## State
 
 - It compiles and is playable on JDK 25.0.1
+- Heck, I've ported it to Android too, so you can play either on desktop or mobile.
 - I've added a few features.
   - Gamepad Support.
   - Fullscreen, Stretch or Letterbox.
@@ -29,14 +30,14 @@ It didn't compile, and had commented bytecode sections. This is me getting it to
   - High Scores.
   - Fast Forward Button (use to be 'A').
 - Codewise, I have removed/rewritten a lot of code.
-  - It started with 18 files 2000 lines, and now it's 5 files 800 lines.
+  - It started with 18 files 2000 lines, and now it's 5 files 800 lines (not including Android.java).
   - There are still some vestige of decompilation.
   - My personal coding style is offensive to most because I'm a disabled hermit.
   - I've done changes that alter a bit the math to my taste, so if you wanted maximum fidelity this ain't it, but it's close enough.
 
 ### Future Work
 
-- Web Browser version somehow.
+- Web Browser version somehow. How low did Java fall? Applet and JavaWebStart are both dead. Wikipedia encourages me to look into IcedTea-Web. What the hell is that?
 
 ### Known Issue
 
@@ -46,22 +47,39 @@ It didn't compile, and had commented bytecode sections. This is me getting it to
   - I've replaced the widgets with drawString to make the app more portable and simpler, but I still suspect there are problems depending of your environment, and getting the Font to look good is now a chore.
 - Android
   - I can't figure how to detect when the navigation (i.e. 3 button overlay) or status bar (i.e. clock, battery) overlays show up. I would love to pause when this happens. I tried 3 different ways to no avail.
-  
-## How to run
 
-I assume you got a Java JDK installed and know how to use the command line for your OS. I'm using a posix system with bash (i.e. standard Linux).
+### How to run the release files
 
-Simple way:
+The .jar file is the simplest possible, which sadly still requires command line 101, and an intuition that when I write 'version' in the filename, it's not verbatim.
+```
+java -jar JetSlalomResurrected-version.jar
+```
+
+The .zip file has gamepad support, which comes with the mess of 3rd party library. You unzip it, and run the launch script. If you aren't on posix, tough luck. If you can't decypher the run script yourself you have no business here.
+```
+./run.sh
+```
+
+The .apk is an android release. Get the file on your phone, and run it. If you live in an alternate universe it will work no problem. In this one you'll have an ugly dialog telling you it wasn't scanned by an authority, and the button to install anyway will be hidden. Worst, when it shows it has no background so it doesn't look like a button compared to the rest of the dialog. Worst, I'm writting this in 2025. Google is threatening to disable all sideloading soon. Worst, I probably forget that you have to allow sideloading to begin with in the phone settings, something I've done once and forgot how to do.
+
+## How to build
+
+I assume you got a Java JDK installed and know how to use the command line for your OS.
+
+Simple most portable way:
 - no gamepad support
 ```
 javac AWT.java
 java AWT
 ```
 
-The ridiculous way:
-- gamepad support
-- an output folder for the binaries
+If you want gamepad support, but aren't running a posix system (e.g. Linux), you'll have to look under the hood in desktop.sh and figure out the altered syntax yourself for the classpath. I ain't supporting Windows ever.
 ```
-rm -Rf bin && javac -cp gamepad:.:gamepad/jinput-2.0.10.jar AWT.java -d bin
-java -cp bin:gamepad/jinput-2.0.10.jar:. -Djava.library.path=gamepad/jinput-2.0.10-natives-all --enable-native-access=ALL-UNNAMED -Djava.util.logging.config.file=gamepad/logging.properties AWT
+./desktop.sh
+```
+
+If you want to build for android, you are probably going to suffer. One because Google breaks their build system every day. Second because I'm a jerk and you probably noticed there aren't any android folder structure commited.
+The scripts generates everything on the fly. I ain't bending the knee to no convention.
+```
+./android.sh
 ```
